--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/tarek102/To-Do-List#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
