--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-do-list",
   "version": "1.0.0",
-  "description": "",
+  "description": "> To do list, where you can add, remove and move tasks from.",
   "private": true,
   "scripts": {
     "test": "jest --coverage",
@@ -50,5 +50,6 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "jest-environment-jsdom": "^28.1.3",
     "lodash": "^4.17.21"
-  }
+  },
+  "main": "webpack.config.js"
 }
